Update resume to reflect new position and responsibilities
- Changed job title from "Enterprise Cloud Architect" to "Assistant Vice President" in personal information section.
- Expanded professional summary to highlight current role and responsibilities.
- Renamed "Work experience" section to "Professional Experience".
- Updated current position details at Celebal Technologies, including new responsibilities and team size.
- Added previous position details at Celebal Technologies with updated responsibilities.
- Revised job descriptions for previous roles to better reflect contributions and achievements.
- Updated education dates to a more standardized format.
- Enhanced technical skills section to include more specific cloud platforms and tools.
- Revised project descriptions for clarity and to emphasize leadership roles and outcomes.
- Updated certifications and achievements for accuracy and completeness.

--- a/resume.cls
+++ b/resume.cls
@@ -2,7 +2,7 @@
 \LoadClass[11pt,letterpaper]{article}
 
 % Enable custom colors
-\RequirePackage[usenames,dvipsnames]{xcolor}
+\RequirePackage[dvipsnames]{xcolor}
 
 % Remove paragraph indentation
 \usepackage[parfill]{parskip}
