--- a/resume.tex
+++ b/resume.tex
@@ -61,9 +61,9 @@
 
 
 \begin{document}
-    \centering{\color{navyblue}\fontsize{16}{16}\selectfont Enterprise Cloud Architect}
+    \centering{\color{navyblue}\fontsize{16}{16}\selectfont Assistant Vice President}
     \printPersonalInfo{
-        \personalInfo{\tag{Location}\info{Dallas, TX} \space \tag{E-mail}\info{yash.bhutoria@celebaltech.com}}
+        \personalInfo{\tag{Phone}\info{+1-217-200-0330} \space \tag{E-mail}\info{yash.bhutoria@celebaltech.com} \space \tag{LinkedIn}\info{linkedin.com/in/yashbhutoria} \space \tag{Location}\info{Dallas, TX}}
     }
     
     
@@ -72,38 +72,62 @@
     %----------------------------------------------------------------------------------------
     
     \begin{rSection}{Professional Summary}
-        {With over 5 years of experience as a Principal Consultant at Celebal Technologies, I specialize the Azure Cloud Platform, Azure PaaS, Data Engineering, and Serverless technologies. I specialize in developing scalable, robust enterprise-grade integration solutions across various sectors, including energy, sustainability, healthcare, and education. My expertise extends to leading cloud migration, optimizing cloud infrastructure for enhanced performance and security, and championing digital transformation efforts. Known for strong problem-solving, automation, and DevOps skills, I deliver cost-efficient, scalable cloud solutions that effectively bridge IT and business objectives.}
+        {As Assistant Vice President at Celebal Technologies, I architect, develop, and manage robust and scalable enterprise-grade integration solutions on Azure Cloud Platform. I leverage my expertise in Azure PaaS, Data Engineering, and Serverless technologies to deliver value to clients across various domains, such as energy, sustainability, healthcare, and education. My expertise extends to leading cloud migration, optimizing cloud infrastructure for enhanced performance and security, and championing digital transformation efforts. Known for strong problem-solving, automation, and DevOps skills, I deliver cost-efficient, scalable cloud solutions that effectively bridge IT and business objectives.}
     \end{rSection}
     
     %----------------------------------------------------------------------------------------
     %   Work experience section
     %----------------------------------------------------------------------------------------
     
-    \begin{rSection}{Work experience}
+    \begin{rSection}{Professional Experience}
         
         % Current work experience entry
-        \begin{rSubsection}{Celebal Technologies Americas, Inc.}{May 2023 - Present}{Principal Consultant, Enterprise Integration}{Dallas, TX}
-            \item Architecting and developing enterprise integration solutions on hyperscaler clouds
-            \item Creating standards and research for Application Modernization
-            \item Managing delivery for high value clients
-            \item Growing and mentoring a team of 40+ associates
-            \item Technical research, strategic planning and advisory
+        \begin{rSubsection}{Celebal Technologies Americas, Inc.}{01/2025 - Present}{Assistant Vice President - Application Development}{Dallas, TX}
+            \item Handling the P\&L as the HOD of Application Development department
+            \item Facilitating communication between technical teams and management personnel
+            \item Analyzing key performance indicators to identify effective strategies
+            \item Pre-sales activities and solution designing
+            \item Strategic planning and advisory
+            \item Using excellent verbal skills to engage customers in conversation and effectively determine needs and requirements
+            \item Evaluating employee performance through observation of job duties as well as feedback from customers and clients
+            \item Managing and mentoring a team of 50
+        \end{rSubsection}
+        
+        % Previous work experience entry
+        \begin{rSubsection}{Celebal Technologies Americas, Inc.}{05/2023 - 01/2025}{Principal Consultant, Application Development}{Dallas, TX}
+            \item Handling the P\&L as the HOD of Application Development department
+            \item Drafted proposals outlining project scope, timeline, deliverables and cost estimates
+            \item Analyzing key performance indicators to identify effective strategies
+            \item Managing relationships with high value clients of the company
+            \item Facilitating communication between technical teams and management personnel
+            \item Assessed employees through on-site observation and interviews to determine strengths and weaknesses in work performance, methods, and team functions
+            \item Strategic planning and advisory
+            \item Managing and mentoring a team of 45
         \end{rSubsection}
 
             % Second work experience entry
-        \begin{rSubsection}{Gies College of Business - University of Illinois Urbana-Champaign}{Oct 2022 - May 2023}{Graduate Research Assistant}{Champaign, IL}
-                \item Evaluated public datasets for Filecoin/IPFS storage suitability
+        \begin{rSubsection}{Gies College of Business - University of Illinois Urbana-Champaign}{10/2022 - 05/2023}{Graduate Research Assistant}{Champaign, IL}
+                \item Evaluated public datasets for Filecoin/IPFS storage suitability to provide universities with better understanding of decentralized storage protocols
                 \item Demonstrated decentralized computing use case over data
-                \item Created cost-benefit analytical model for decentralized storage
-                \item Provided insights on decentralized storage adoption for universities
+                \item Created analytical model showing cost-benefit tradeoffs of using decentralized storage
+                \item Provided insights on potential benefits and risks of adopting decentralized storage solutions for university IT infrastructure
         \end{rSubsection}
 
         % First work experience entry
-        \begin{rSubsection}{Celebal Technologies Pvt. Ltd.}{May 2019 - July 2022}{Member of Technical Staff, Enterprise Integration}{Jaipur, India}
-            \item Designing and developing data integration solutions on hyperscalers like Azure and GCP
+        \begin{rSubsection}{Celebal Technologies Pvt. Ltd.}{05/2019 - 07/2022}{Member of Technical Staff, Enterprise Integration}{Jaipur, India}
+            \item Architecting and developing data integration solutions on hyperscalers like Azure and GCP
             \item Managing delivery for high value clients
-            \item Growing and mentoring a team of 30+ associates
+            \item Growing and mentoring a team of 40 associates
             \item Technical research, strategic planning and advisory
+            \item Architecting solutions for pre-sales
+        \end{rSubsection}
+        
+        % Associate Data Engineer position
+        \begin{rSubsection}{Celebal Technologies}{10/2017 - 04/2019}{Associate Data Engineer}{Jaipur, India}
+            \item Integrating data, performing ETL
+            \item Processing and Modelling Data into OLAP Models
+            \item Creating reports and dashboards from data models
+            \item Creating and Deploying solutions onto Azure
         \end{rSubsection}
         
         
@@ -117,13 +141,18 @@
     \begin{rSection}{Education}
         
         % Master's degree entry
-        \begin{rSubsectionNoBullet}{\bf Master of Science in Business Analytics}{University of Illinois Urbana-Champaign}{Gies College of Business, Champaign, IL}{2022 - 2023}
-            \italicitem{Graduated with Beta Gamma Sigma ($\mathcal{B}\Gamma\Sigma$) honor }
+        \begin{rSubsectionNoBullet}{\bf Master of Science in Business Analytics}{University of Illinois Urbana-Champaign}{Gies College of Business, Champaign, IL}{07/2022 - 05/2023}
+            \italicitem{Graduated with Beta Gamma Sigma honor }
         \end{rSubsectionNoBullet}
         
         % Bachelor's degree entry
-        \begin{rSubsectionNoBullet}{\bf Bachelor of Technology in Computer Science}{Rajasthan Technical University}{Poornima College of Engineering, Jaipur, India}{2015 - 2019}
+        \begin{rSubsectionNoBullet}{\bf Bachelor of Technology in Computer Science}{Rajasthan Technical University}{Poornima College of Engineering, Jaipur, India}{07/2015 - 05/2019}
             \italicitem{}
+        \end{rSubsectionNoBullet}
+        
+        % Senior Secondary entry
+        \begin{rSubsectionNoBullet}{\bf Senior Secondary}{CBSE}{Jhunjhunu Academy, Jaipur, India}{06/2013 - 05/2015}
+            \italicitem{89.80\%}
         \end{rSubsectionNoBullet}
         
     \end{rSection}
@@ -133,13 +162,16 @@
     % Technical skills section
     %----------------------------------------------------------------------------------------
     
-    \tableEnv{Technical skills}{
-        \entry{Project Domains}{Application Modernization, Enterprise Integration, Data Engineering, Infrastructure as Code, API Design}
-        \entry{Integration Services}{Azure Functions, Azure Logic Apps, Azure Service Bus, Azure Event Grid, Azure API Management, Azure App Services, Azure Storage Services}
-        \entry{Integration Platforms}{Databricks, Azure Data Factory, Dell Boomi, Google Data Fusion, Apache Airflow}
-        \entry{DevOps Tools}{Azure DevOps, Jira, Docker, Git}
-        \entry{Frameworks and Libraries}{FastAPI, PySpark, Selenium, Matplotlib, Pandas, Numpy}
-        \entry{Languages}{Python, Go, Shell, Terraform, DAX, R, SQL}
+    \tableEnv{Technical Skills}{
+        \entry{Cloud Platforms}{Microsoft Azure, Amazon Web Services (AWS), Google Cloud Platform (GCP)}
+        \entry{Programming Languages}{Python, Go, C\#, JavaScript, SQL, PowerShell, Bash, Terraform, R, DAX}
+        \entry{Azure Services}{Azure Functions, Azure Logic Apps, Azure Service Bus, Azure Event Grid, Azure API Management, Azure App Services, Azure Data Factory, Azure DevOps, Azure Storage}
+        \entry{Databases \& Analytics}{Azure SQL Database, PostgreSQL, MySQL, CosmosDB, Databricks, Power BI, NoSQL}
+        \entry{DevOps \& CI/CD}{Azure DevOps, Docker, Kubernetes, Git, Jenkins, GitHub Actions, Infrastructure as Code (IaC)}
+        \entry{Integration \& APIs}{REST APIs, GraphQL, Microservices, API Gateway, Enterprise Service Bus, Dell Boomi}
+        \entry{Data Engineering}{Apache Airflow, PySpark, ETL/ELT, Data Pipelines, Data Warehousing, Apache Kafka}
+        \entry{Frameworks \& Tools}{FastAPI, .NET, Spring Boot, Selenium, Pandas, NumPy, Matplotlib, Agile/Scrum}
+        \entry{Specializations}{Cloud Architecture, Application Modernization, Digital Transformation, Enterprise Integration, Solution Architecture}
     }
     
     %----------------------------------------------------------------------------------------
@@ -148,34 +180,24 @@
     
     \begin{rSection}{Projects}
             \begin{itemize}
-            \item \textbf{Integration Modernization (for a Snacks Manufacturer at Hanover,PA)} (09/2023 - Present):
+            \item \textbf{Integration Modernization (for a Snacks Manufacturer)} (09/2023 - Present):
             \begin{itemize}
-                \item Role: Onsite Architect, leading a team of 15
-                \item Description: Initially grappling with challenges in harmonizing integration patterns due to an early adoption of hybrid cloud strategies, our intervention paved the way for a streamlined, standardized approach. We executed the development of comprehensive standards and design documentation, focusing on Azure Services, Azure DevOps workflows, development protocols, security, as well as logging and alerting frameworks. We crafted libraries and frameworks to ensure adherence to these standards. This initiative modernized over 20 integrations, markedly enhancing their performance, stability, maintainability, development velocity, and testing cycles.
-                \item Achievements: Successfully deployed Supply and Demand Planning data pipelines, establishing a reusable, well-defined batch data integration framework, marking a significant milestone in the project’s progress. 
-            \end{itemize}
-        \end{itemize}
-
-            \begin{itemize}
-            \item \textbf{Modernizing Financial Data Life-cycle (for University of Illinois Urbana-Champaign)} (10/2023 - 04/2024):
-            \begin{itemize}
-                \item Role: Lead Developer, lead a team of 6
-                \item Description: The project aimed at addressing inefficiencies in the University of Illinois' billing process by modernizing the CFOP (data management through cloud integration. Leveraging AWS services (Lambda, DynamoDB, CloudWatch), we developed an automated solution to streamline CFOP updates and queries, eliminating manual interventions and significantly reducing operational delays. The solution included developing interactive forms for business users, consolidating APIs, and ensuring data security and integrity. This project was executed as part of the Business Practicum during the MSBA degree.
-                \item Achievements: Successfully implemented solution, resulting in operational efficiency and enhanced data accuracy. The project was recognized for its innovative approach and selected for presentation at the UIUC Spring 2023 IT Pro Forum, highlighting the potential for process excellence through technology.
+                \item Role: Lead delivery across 5+ projects as an Architect and delivery manager, mentoring and overseeing 20+ Engineers for one of the largest snacks brands of the USA
+                \item Description: Established new and improved IT processes, standards and framework to streamline the operational efficiency of the customer
             \end{itemize}
         \end{itemize}
 
         \begin{itemize}
-            \item \textbf{IPaaS on Azure (for a Hospitality Company at San Diego)} (10/2020 - 07/2022):
+            \item \textbf{IPaaS on Azure (for a Hospitality Company at San Diego)} (09/2019 - 07/2022):
             \begin{itemize}
                 \item Role: Lead Offshore Developer, lead a team of 8
-                \item Description: The customer wanted to eliminate point to point custom data integration solution with a unified and extendable platform. Designed and developed an integration platform on Azure. The project included C\# based server-less functions, API Gateway, Cloud-based automated workflows and Infrastructure as Code all deployed and configured with CI/CD Pipelines for automation and agility.
+                \item Description: The customer wanted to eliminate point to point custom data integration solution with a unified and extendable platform. Designed and developed an integration platform on Azure. The project included C\# based serverless functions, API Gateway, Cloud-based automated workflows and Infrastructure as Code all deployed and configured with CI/CD Pipelines for automation and agility.
                 \item Achievements: Finished phase one of the project by going live as part of a company wide technology makeover effort.
             \end{itemize}
         \end{itemize}
 
         \begin{itemize}
-            \item \textbf{Data Landscape Modernization (for an Illinois-based Motorparts Manufacturer)} (04/2021 - Present):
+            \item \textbf{Data Landscape Modernization (for an Illinois-based Motorparts Manufacturer)} (04/2021 - 04/2022):
             \begin{itemize}
                 \item Role: Architect and Lead Developer, lead a team of 6
                 \item Description: Modernized the customer's data ingestion landscape by implementing batched data pipelines using Azure Data Factory and eliminating the need for any 3rd party middle-ware saving thousands of dollars in licensing costs. Established mechanisms to consolidate and move data from multiple SAP S/4 instances into Salesforce as aggregates to enable sales order reporting.
@@ -183,10 +205,10 @@
         \end{itemize}
         
         \begin{itemize}
-            \item \textbf{Data Landscape Modernization (for a Medical Imaging Device Manufacturer in Manhattan)} (10/2020 - Present):
+            \item \textbf{Data Landscape Modernization (for a Medical Imaging Device Manufacturer in Manhattan)} (10/2020 - 05/2022):
             \begin{itemize}
                 \item Role: Architect and Lead Developer, lead a team of 6
-                \item Description: Modernized the customer's data landscape by moving from legacy on-premise database to a managed cloud database on Microsoft Azure, bringing down operational and management cost by $\sim$40\%. Established batch and real-time data ingestion pipelines from SAP C4C to Azure SQL Database with monitoring using in a Server-less fashion, well-defined procedures for deployment and release using Azure DevOps to ensure collaboration and quality control.
+                \item Description: Modernized the customer's data landscape by moving from legacy on-premise database to a managed cloud database on Microsoft Azure, bringing down operational and management cost by approximately 40%. Established batch and real-time data ingestion pipelines from SAP C4C to Azure SQL Database with monitoring using in a Serverless fashion, well-defined procedures for deployment and release using Azure DevOps to ensure collaboration and quality control.
             \end{itemize}
         \end{itemize}
         
@@ -229,7 +251,7 @@
     %----------------------------------------------------------------------------------------
     
     \tableEnv{Certifications}{
-        \entry{}{Databricks Lakehouse Fundamentals, Azure Developer Associate, Datacamp Supervised Learning, Exploring and Producing Data for Business Decision Making, Inferential and Predictive Statistics for Business, Azure Data Fundamentals, Azure Fundamentals}
+        \entry{}{Databricks Lakehouse Fundamentals, Datacamp Supervised Learning, Exploring and Producing Data for Business Decision Making, Inferential and Predictive Statistics for Business, Azure Data Fundamentals, Azure Fundamentals}
     }
     
     
@@ -240,11 +262,14 @@
     \begin{rSection}{Other Achievements and Activities}
         \begin{itemize}
             \item \textbf{Academic Excellence Award}, Issued by Gies College of Business - May 2023 \\
-            Associated with University of Illinois Urbana-Champaign. This award signifies recognition as a distinguished student for outstanding academic achievements.
-            \item \textbf{Lifetime Member}, Issued by Beta Gamma Sigma - Apr 2023 Associated with University of Illinois Urbana-Champaign. CH-34C-3046335. This distinction marks a lifetime membership in Beta Gamma Sigma, the international business honor society that recognizes the top 20 of graduate students in business schools accredited by The Association to Advance Collegiate Schools of Business (AACSB) worldwide.
+            Associated with University of Illinois Urbana-Champaign. Awarded for attaining the highest score in the MS Business Analytics cohort.
+            \item \textbf{Lifetime Member}, Issued by Beta Gamma Sigma - May 2023 Associated with University of Illinois Urbana-Champaign. CH-34C-3046335. This distinction marks a lifetime membership in Beta Gamma Sigma, the international business honor society that recognizes the top 20\% of graduate students in business schools accredited by The Association to Advance Collegiate Schools of Business (AACSB) worldwide.
             \item \textbf{Member of Jury, Manipal National Hackathon (DoIT)}: Mentored and evaluated innovative projects presented by tech students from all over the India in the 24Hr hackathon organised by Department of IT Rajasthan Gov and Manipal University
             \item \textbf{Mentor and Judge, JECRC Hackathon 4.0 (2020)}: Mentored and evaluated innovative projects presented by tech students from all over the India in the 24Hr hackathon organised by JECRC College, Jaipur
             \item \textbf{Expert Lectures at Various Universities}: Delivered multiple expert lectures on Cloud Services, Servelress computation and Modern API Design at University of Illinois Urbana-Champaign, MNIT Jaipur and Manipal University
+            \item \textbf{Finalist, TCS Inframind (2019)}: Got to the final round and Pre Placement offer from Tata Consultancy Services for IaaS design competition
+            \item \textbf{Finalist HackWithInfy (2018)}: Made it to the top 100 programmers nationwide after clearing two rounds of programming challenges conducted online by Infosys
+            \item \textbf{CSE Department Representative (2017)}: Selected as department representative and presented the annual report of Department of Computer Engineering on the occasion of first ever Department Day
         \end{itemize}
     \end{rSection}
     
