Update resume content and formatting for clarity and accuracy

--- a/resume.tex
+++ b/resume.tex
@@ -63,7 +63,8 @@
 \begin{document}
     \centering{\color{navyblue}\fontsize{16}{16}\selectfont Assistant Vice President}
     \printPersonalInfo{
-        \personalInfo{\tag{Phone}\info{+1-217-200-0330} \space \tag{E-mail}\info{yash.bhutoria@celebaltech.com} \space \tag{LinkedIn}\info{linkedin.com/in/yashbhutoria} \space \tag{Location}\info{Dallas, TX}}
+        \personalInfo{\tag{Email}\info{yash.bhutoria@celebaltech.com} \space \tag{Phone}\info{+1-217-200-0330}}
+        \personalInfo{\tag{LinkedIn}\info{linkedin.com/in/yashbhutoria} \space \tag{Location}\info{Dallas, TX}}
     }
     
     
@@ -72,7 +73,7 @@
     %----------------------------------------------------------------------------------------
     
     \begin{rSection}{Professional Summary}
-        {As Assistant Vice President at Celebal Technologies, I architect, develop, and manage robust and scalable enterprise-grade integration solutions on Azure Cloud Platform. I leverage my expertise in Azure PaaS, Data Engineering, and Serverless technologies to deliver value to clients across various domains, such as energy, sustainability, healthcare, and education. My expertise extends to leading cloud migration, optimizing cloud infrastructure for enhanced performance and security, and championing digital transformation efforts. Known for strong problem-solving, automation, and DevOps skills, I deliver cost-efficient, scalable cloud solutions that effectively bridge IT and business objectives.}
+        {As Assistant Vice President at Celebal Technologies, I architect, develop, and manage robust and scalable enterprise-grade integration solutions on Azure Cloud Platform. I leverage my expertise in Azure PaaS, Data Engineering, and Serverless technologies to deliver value to clients across various domains, such as energy, sustainability, healthcare, and education.}
     \end{rSection}
     
     %----------------------------------------------------------------------------------------
@@ -157,21 +158,18 @@
         
     \end{rSection}
     
-    \newpage
     %----------------------------------------------------------------------------------------
     % Technical skills section
     %----------------------------------------------------------------------------------------
     
     \tableEnv{Technical Skills}{
-        \entry{Cloud Platforms}{Microsoft Azure, Amazon Web Services (AWS), Google Cloud Platform (GCP)}
-        \entry{Programming Languages}{Python, Go, C\#, JavaScript, SQL, PowerShell, Bash, Terraform, R, DAX}
-        \entry{Azure Services}{Azure Functions, Azure Logic Apps, Azure Service Bus, Azure Event Grid, Azure API Management, Azure App Services, Azure Data Factory, Azure DevOps, Azure Storage}
-        \entry{Databases \& Analytics}{Azure SQL Database, PostgreSQL, MySQL, CosmosDB, Databricks, Power BI, NoSQL}
-        \entry{DevOps \& CI/CD}{Azure DevOps, Docker, Kubernetes, Git, Jenkins, GitHub Actions, Infrastructure as Code (IaC)}
-        \entry{Integration \& APIs}{REST APIs, GraphQL, Microservices, API Gateway, Enterprise Service Bus, Dell Boomi}
-        \entry{Data Engineering}{Apache Airflow, PySpark, ETL/ELT, Data Pipelines, Data Warehousing, Apache Kafka}
-        \entry{Frameworks \& Tools}{FastAPI, .NET, Spring Boot, Selenium, Pandas, NumPy, Matplotlib, Agile/Scrum}
-        \entry{Specializations}{Cloud Architecture, Application Modernization, Digital Transformation, Enterprise Integration, Solution Architecture}
+        \entry{Programming}{Python, C\#, JavaScript, Go, SQL, PowerShell, Bash, Terraform}
+        \entry{Cloud Platforms}{Azure (Expert), AWS (Proficient), Google Cloud Platform (Proficient)}
+        \entry{Databases}{Azure SQL, PostgreSQL, MySQL, CosmosDB, Redis, MongoDB}
+        \entry{DevOps \& Tools}{Docker, Kubernetes, Git, Azure DevOps, Jenkins, GitHub Actions, Terraform}
+        \entry{Data \& Analytics}{Apache Kafka, Airflow, PySpark, Databricks, Power BI, ETL/ELT}
+        \entry{Frameworks}{.NET Core, FastAPI, Spring Boot, React, Node.js}
+        \entry{Architecture}{Microservices, Serverless, Event-Driven, RESTful APIs, GraphQL}
     }
     
     %----------------------------------------------------------------------------------------
@@ -200,7 +198,7 @@
             \item \textbf{Data Landscape Modernization (for an Illinois-based Motorparts Manufacturer)} (04/2021 - 04/2022):
             \begin{itemize}
                 \item Role: Architect and Lead Developer, lead a team of 6
-                \item Description: Modernized the customer's data ingestion landscape by implementing batched data pipelines using Azure Data Factory and eliminating the need for any 3rd party middle-ware saving thousands of dollars in licensing costs. Established mechanisms to consolidate and move data from multiple SAP S/4 instances into Salesforce as aggregates to enable sales order reporting.
+                \item Description: Modernized the customer's data ingestion landscape by implementing batched data pipelines using Azure Data Factory and eliminating the need for any 3rd party middleware saving thousands of dollars in licensing costs. Established mechanisms to consolidate and move data from multiple SAP S/4 instances into Salesforce as aggregates to enable sales order reporting.
             \end{itemize}
         \end{itemize}
         
@@ -216,7 +214,7 @@
             \item \textbf{Data Integration on Dell Boomi (for a Global Sports Brand)} (05/2020 - 08/2020):
             \begin{itemize}
                 \item Role: Lead Offshore Developer, lead a team of 4
-                \item Description: Managed overall offshore delivery, and produced planning and design documents. Developed integrations connecting 10+ systems to run on daily batches and real-time frequencies using Dell Boomi Integration platform as a middle-ware.
+                \item Description: Managed overall offshore delivery, and produced planning and design documents. Developed integrations connecting 10+ systems to run on daily batches and real-time frequencies using Dell Boomi Integration platform as a middleware.
             \end{itemize}
         \end{itemize}
         
@@ -234,42 +232,29 @@
     %   Academic Research
     %----------------------------------------------------------------------------------------
     
-    \begin{rSection}{Academic Research}
-        \begin{itemize}
-            \item \textbf{Decentralized storage with Filecoin}: This research aims to provide public universities with a better understanding of the role of decentralized storage protocols in their IT infrastructure, specifically Filecoin/IPFS. The team plans to evaluate which public data sets are suitable for storage using Filecoin, demonstrate a use case of decentralized computing over the data, and create an analytical model that shows the cost-benefit trade offs of using decentralized storage. The output of this research provides universities with valuable insights into the potential benefits and risks of adopting decentralized storage solutions, allowing them to make more informed decisions about their IT infrastructure.
-            \item \textbf{Creating LLM-based Dynamic Analytics on CRM and ERP Systems}: This research aims to develop a system that can create dynamic queries and visualizations based on user input and apply natural language processing (NLP) to Customer
-            Relationship Management (CRM) and Enterprise Resource Planning (ERP) systems. The project 
-            will involve analyzing large amounts of data from various sources using LLaMA (Large 
-            Language Model Meta AI) model and fine-tuning LLMs to specialized queries. The generated 
-            queries will be used to create dynamic visualizations, providing users with real-time insights 
-            into their CRM and ERP systems. The project used National Center for Super computing Applications Delta supercomputer at UIUC for compute.
-        \end{itemize}
-    \end{rSection}
-    
     %----------------------------------------------------------------------------------------
     % Certifications
     %----------------------------------------------------------------------------------------
     
     \tableEnv{Certifications}{
-        \entry{}{Databricks Lakehouse Fundamentals, Datacamp Supervised Learning, Exploring and Producing Data for Business Decision Making, Inferential and Predictive Statistics for Business, Azure Data Fundamentals, Azure Fundamentals}
+        \entry{}{Azure Fundamentals (AZ-900) (01/2021 - Present), Azure Developer Associate (AZ-204) (02/2021 - 02/2023), Azure Data Fundamentals (DP-900) (01/2021 - Present), Intermediate Python for Data Science Course (08/2018 - Present)}
     }
     
     
     %----------------------------------------------------------------------------------------
-    %   Honors, Achievements and Activities
+    %   Awards \& Leadership
     %----------------------------------------------------------------------------------------
     
-    \begin{rSection}{Other Achievements and Activities}
+    \begin{rSection}{Awards \& Leadership}
         \begin{itemize}
-            \item \textbf{Academic Excellence Award}, Issued by Gies College of Business - May 2023 \\
-            Associated with University of Illinois Urbana-Champaign. Awarded for attaining the highest score in the MS Business Analytics cohort.
-            \item \textbf{Lifetime Member}, Issued by Beta Gamma Sigma - May 2023 Associated with University of Illinois Urbana-Champaign. CH-34C-3046335. This distinction marks a lifetime membership in Beta Gamma Sigma, the international business honor society that recognizes the top 20\% of graduate students in business schools accredited by The Association to Advance Collegiate Schools of Business (AACSB) worldwide.
-            \item \textbf{Member of Jury, Manipal National Hackathon (DoIT)}: Mentored and evaluated innovative projects presented by tech students from all over the India in the 24Hr hackathon organised by Department of IT Rajasthan Gov and Manipal University
-            \item \textbf{Mentor and Judge, JECRC Hackathon 4.0 (2020)}: Mentored and evaluated innovative projects presented by tech students from all over the India in the 24Hr hackathon organised by JECRC College, Jaipur
-            \item \textbf{Expert Lectures at Various Universities}: Delivered multiple expert lectures on Cloud Services, Servelress computation and Modern API Design at University of Illinois Urbana-Champaign, MNIT Jaipur and Manipal University
-            \item \textbf{Finalist, TCS Inframind (2019)}: Got to the final round and Pre Placement offer from Tata Consultancy Services for IaaS design competition
-            \item \textbf{Finalist HackWithInfy (2018)}: Made it to the top 100 programmers nationwide after clearing two rounds of programming challenges conducted online by Infosys
-            \item \textbf{CSE Department Representative (2017)}: Selected as department representative and presented the annual report of Department of Computer Engineering on the occasion of first ever Department Day
+            \item \textbf{Academic Excellence Award} (05/2023) - Gies College of Business: Awarded for attaining the highest score in the MS Business Analytics cohort
+            \item \textbf{Beta Gamma Sigma Lifetime Member} (05/2023) - CH-34C-3046335: BGS recognizes and honors the top 10\% of undergraduate students, the top 20\% of graduate students, and all doctoral candidates from around the world in business schools accredited by The Association to Advance Collegiate Schools of Business
+            \item \textbf{Member of Jury, Manipal National Hackathon (DoIT)} (2020): Mentored and evaluated innovative projects presented by tech students from all over India in the 24Hr hackathon organised by Department of IT Rajasthan Gov and Manipal University
+            \item \textbf{Mentor and Judge, JECRC Hackathon 4.0} (2020): Mentored and evaluated innovative projects presented by tech students from all over India in the 24Hr hackathon organised by JECRC College, Jaipur
+            \item \textbf{Multiple Expert Lectures at Manipal University and MNIT Jaipur} (2019 - 2020): Delivered multiple expert lectures on Cloud Services, Serverless computation and Modern API Design
+            \item \textbf{Finalist, TCS Inframind} (2019): Got to the final round and Pre Placement offer from Tata Consultancy Services for IaaS design competition
+            \item \textbf{Finalist HackWithInfy} (2018): Made it to the top 100 programmers nationwide after clearing two rounds of programming challenges conducted online by Infosys
+            \item \textbf{CSE Department Representative} (2017): Selected as department representative and presented the annual report of Department of Computer Engineering on the occasion of first ever Department Day
         \end{itemize}
     \end{rSection}
     
